force-app/main/default/objects/Account/fields/Billing_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_System_Id__c</fullName>
    <externalId>true</externalId>
    <label>Billing System Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>