force-app/main/default/objects/Account/fields/Health_Score_Updated__c.field-meta.xml
<CustomField>
    <fullName>Health_Score_Updated__c</fullName>
    <label>Health Score Updated</label>
    <type>DateTime</type>
</CustomField>