force-app/main/default/objects/Account/fields/Health_Trend__c.field-meta.xml
<CustomField>
    <fullName>Health_Trend__c</fullName>
    <label>Health Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improving</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Declining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>