force-app/main/default/objects/Account/fields/Monthly_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Active_Users__c</fullName>
    <label>Monthly Active Users</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>