force-app/main/default/objects/Account/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <label>NPS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>